chore: adding shared services and users module
