# src/api/users/interfaces/user.interface.ts
@@ -1,0 +1,14 @@
+
+import { Document, Types } from 'mongoose';
+
+export interface IUser extends Document {
+    _id: Types.ObjectId;
+    firstName: string;
+    lastName: string;
+    age: number;
+    username: string;
+    password: string;
+    isDeleted: boolean;
+    createdAt: Date | string;
+    updatedAt: Date | string;
+}
